Final Site commit

--- a/calendar.html
+++ b/calendar.html
@@ -69,13 +69,13 @@
     <li><section id="marathon" class="column-2">
       <h1 class="cal-title">Movie Day</h1>
       <p class ="cal-description">This year we plan to have a day-long Star Wars movie marathon. We will watch all or most of the complete saga and then<br>follow up with watching Star Wars Episode 7<br>in theaters.</p>
-      <a href="https://www.facebook.com/groups/Sground/">Learn More</a>
+      <a href="https://www.facebook.com/groups/Sground/">Dec. 21</a>
       <hr>
     </section></li>
 
     <li><section id="amore" class="column-3">
       <h1 class="cal-title">Amore</h1>
-      <p class ="cal-description">The big youth group fundraiser<br>for supplying funds for the rest of<br> the year. Each year there is a different theme.<br> Students set up, serve food, act,<br>sing, and clean up.</p>
+      <p class ="cal-description">The big youth group fundraiser<br>for supplying funds for the rest of<br> the year. This year's theme is 'Disney'.<br> Students set up, serve food, act,<br>sing, and clean up.</p>
       <a href="https://www.facebook.com/groups/Sground/" class="inverse">Learn More</a>
       <hr>
     </section></li>
@@ -101,7 +101,7 @@
 	     <footer>
         <a href="https://twitter.com/Sg_Youth" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="https://www.facebook.com/groups/Sground" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <p>&copy; 2015 Solid Ground Youth Ministries.</p>
+        <p>&copy; 2015 Solid Ground Youth Ministries.<a href="http://ben-stjohn.com/" target="_blank">@St. John Web</a></p>
       </footer>
 </div>
   
