--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <footer>
         <a href="https://twitter.com/Sg_Youth" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="https://www.facebook.com/groups/Sground" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <p>&copy; 2015 Solid Ground Youth Ministries.</p>
+        <p>&copy; 2015 Solid Ground Youth Ministries.<a href="http://ben-stjohn.com/" target="_blank">@St. John Web</a></p>
       </footer>
 </div>
   
