--- a/sponsors.html
+++ b/sponsors.html
@@ -39,6 +39,13 @@
           </div>
         </li>
 
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/andrea.jpg" alt="Andrea" class="spon-pic">
+            <h1>Andrea Hughes</h1>
+          </div>
+        </li>
+
         <li class="individual">
           <div class="photo">
             <img src="sponsors/brad.jpg" alt="Brad" class="spon-pic">
@@ -94,6 +101,79 @@
             <h1>Alan Greene</h1>
           </div>
         </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/sarahg.jpg" alt="Sarah" class="spon-pic">
+            <h1>Sarah Greene</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/jakec.jpg" alt="Jake" class="spon-pic">
+            <h1>Jake Campbell</h1>
+          </div>
+        </li>
+
+        
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/skylar.jpg" alt="Skylar" class="spon-pic">
+            <h1>Skylar Kaczanowski</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/leslie.jpg" alt="Leslie" class="spon-pic">
+            <h1>Leslie Kaczanowski</h1>
+          </div>
+        </li>
+
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/meganb.jpg" alt="Megan" class="spon-pic">
+            <h1>Megan Bolhuis</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/dan.jpg" alt="Dan" class="spon-pic">
+            <h1>Dan Bolhuis</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/megand.jpg" alt="Megan" class="spon-pic">
+            <h1>Megan Dickinson</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/levi.jpg" alt="Levi" class="spon-pic">
+            <h1>Levi Wittkopp</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/kim.jpg" alt="Kim" class="spon-pic">
+            <h1>Kim Anderson</h1>
+          </div>
+        </li>
+
+         <li class="individual">
+          <div class="photo">
+            <img src="sponsors/nick.jpg" alt="Nick" class="spon-pic">
+            <h1>Nick Bolhuis</h1>
+          </div>
+        </li>
     </ul>
 
 	</section>
@@ -101,7 +181,7 @@
 	     <footer>
         <a href="https://twitter.com/Sg_Youth" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="https://www.facebook.com/groups/Sground" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <p>&copy; 2015 Solid Ground Youth Ministries.</p>
+        <p>&copy; 2015 Solid Ground Youth Ministries. <a href="http://ben-stjohn.com/" target="_blank">@St. John Web</a></p>
       </footer>
 </div>
   
